--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+    <!-- Your code here 
+    https://s3.amazonaws.com/ironboard-learn/lion.jpg
+    The first should have just a source attribute
+    The second should include an alt text, in addition to a source
+    The third should have both an alt and source attribute, as well as a title attribute
+    -->
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Lion">
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Lion" title="Lion in the wild">
   </body>
 </html>
